machine_learning/q4-aptos2019-blindness-detection/mle_c617eb89-e0b7-4a21-92e8-0028d18a5053/results_c617eb89-e0b7-4a21-92e8-0028d18a5053_control_group_partition_1.txt
=== System Information ===
Date: Fri May 23 04:21:14 UTC 2025
Hostname: optane01
Python version: Python 3.12.10
  File "<string>", line 1
    import torch; print(f\"PyTorch {torch.__version__}, CUDA available: {torch.cuda.is_available()}\")
                          ^
SyntaxError: unexpected character after line continuation character
PyTorch version: 
GPU information:
Fri May 23 04:21:15 2025       
+-----------------------------------------------------------------------------------------+
| NVIDIA-SMI 570.86.15              Driver Version: 570.86.15      CUDA Version: 12.8     |
|-----------------------------------------+------------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |
|                                         |                        |               MIG M. |
|=========================================+========================+======================|
|   0  NVIDIA A40                     Off |   00000000:0F:00.0 Off |                    0 |
|  0%   56C    P0             84W /  300W |       1MiB /  46068MiB |      4%      Default |
|                                         |                        |                  N/A |
+-----------------------------------------+------------------------+----------------------+
                                                                                         
+-----------------------------------------------------------------------------------------+
| Processes:                                                                              |
|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |
|        ID   ID                                                               Usage      |
|=========================================================================================|
|  No running processes found                                                             |
+-----------------------------------------------------------------------------------------+

=== Dataset Information ===
Train samples: 3296 (including header)
Test samples: 368 (including header)
Train images: 3295
Test images: 367

=== Experiment Settings ===
- Using PyTorch with GPU acceleration
- Using batch size of 16
- Using standard image size (224x224) for ResNet50
- Using ResNet50 model with pretrained weights
- Using all training samples (full dataset)
- Training for 30 epochs with early stopping
- Advanced preprocessing with circular crop
- Data augmentation (flips, rotations, color jitter)
- Learning rate scheduling
- DataLoader with num_workers=0 to avoid multiprocessing issues

=== Starting Experiment ===
Model: ResNet50 (PyTorch)
Experiment ID: c617eb89-e0b7-4a21-92e8-0028d18a5053
Group: control_group_partition_1

2025-05-23 04:21:21 - INFO - Using device: cuda:0
2025-05-23 04:21:21 - INFO - Training data: 3295 samples
2025-05-23 04:21:21 - INFO - Test data: 367 samples
2025-05-23 04:21:21 - INFO - Training subset: 2636 samples
2025-05-23 04:21:21 - INFO - Validation subset: 659 samples
2025-05-23 04:21:21 - INFO - Epoch 1/30
2025-05-23 04:29:30 - INFO - Train Loss: 0.8384 Acc: 0.7132 | Val Loss: 0.7143 Acc: 0.7542
2025-05-23 04:29:30 - INFO - Validation loss decreased (inf --> 0.714282). Saving model...
2025-05-23 04:29:31 - INFO - Epoch 2/30
2025-05-23 04:37:38 - INFO - Train Loss: 0.6532 Acc: 0.7473 | Val Loss: 0.6785 Acc: 0.7481
2025-05-23 04:37:38 - INFO - Validation loss decreased (0.714282 --> 0.678488). Saving model...
2025-05-23 04:37:38 - INFO - Epoch 3/30
2025-05-23 04:45:46 - INFO - Train Loss: 0.6332 Acc: 0.7576 | Val Loss: 0.5840 Acc: 0.7678
2025-05-23 04:45:46 - INFO - Validation loss decreased (0.678488 --> 0.584014). Saving model...
2025-05-23 04:45:46 - INFO - Epoch 4/30
2025-05-23 04:53:53 - INFO - Train Loss: 0.5956 Acc: 0.7777 | Val Loss: 0.5915 Acc: 0.7527
2025-05-23 04:53:53 - INFO - EarlyStopping counter: 1 out of 5
2025-05-23 04:53:53 - INFO - Epoch 5/30
2025-05-23 05:02:00 - INFO - Train Loss: 0.5456 Acc: 0.7853 | Val Loss: 0.6274 Acc: 0.7769
2025-05-23 05:02:00 - INFO - EarlyStopping counter: 2 out of 5
2025-05-23 05:02:00 - INFO - Epoch 6/30
2025-05-23 05:10:07 - INFO - Train Loss: 0.5584 Acc: 0.7929 | Val Loss: 0.6014 Acc: 0.7678
2025-05-23 05:10:07 - INFO - EarlyStopping counter: 3 out of 5
2025-05-23 05:10:07 - INFO - Epoch 7/30
2025-05-23 05:18:17 - INFO - Train Loss: 0.5268 Acc: 0.8020 | Val Loss: 0.5745 Acc: 0.7709
2025-05-23 05:18:17 - INFO - Validation loss decreased (0.584014 --> 0.574497). Saving model...
2025-05-23 05:18:17 - INFO - Epoch 8/30
2025-05-23 05:26:25 - INFO - Train Loss: 0.5320 Acc: 0.7940 | Val Loss: 0.5312 Acc: 0.7648
2025-05-23 05:26:25 - INFO - Validation loss decreased (0.574497 --> 0.531227). Saving model...
2025-05-23 05:26:26 - INFO - Epoch 9/30
2025-05-23 05:34:35 - INFO - Train Loss: 0.5376 Acc: 0.7967 | Val Loss: 0.6166 Acc: 0.7724
2025-05-23 05:34:35 - INFO - EarlyStopping counter: 1 out of 5
2025-05-23 05:34:35 - INFO - Epoch 10/30
2025-05-23 05:42:43 - INFO - Train Loss: 0.5162 Acc: 0.8024 | Val Loss: 0.5951 Acc: 0.7724
2025-05-23 05:42:43 - INFO - EarlyStopping counter: 2 out of 5
2025-05-23 05:42:43 - INFO - Epoch 11/30
2025-05-23 05:50:52 - INFO - Train Loss: 0.5238 Acc: 0.7997 | Val Loss: 0.6618 Acc: 0.7693
2025-05-23 05:50:52 - INFO - EarlyStopping counter: 3 out of 5
2025-05-23 05:50:52 - INFO - Epoch 12/30
2025-05-23 05:58:59 - INFO - Train Loss: 0.5107 Acc: 0.8080 | Val Loss: 0.5939 Acc: 0.7527
2025-05-23 05:58:59 - INFO - EarlyStopping counter: 4 out of 5
2025-05-23 05:58:59 - INFO - Epoch 13/30
2025-05-23 06:07:08 - INFO - Train Loss: 0.4439 Acc: 0.8304 | Val Loss: 0.5213 Acc: 0.7951
2025-05-23 06:07:08 - INFO - Validation loss decreased (0.531227 --> 0.521306). Saving model...
2025-05-23 06:07:09 - INFO - Epoch 14/30
2025-05-23 06:15:16 - INFO - Train Loss: 0.4228 Acc: 0.8376 | Val Loss: 0.5106 Acc: 0.8027
2025-05-23 06:15:16 - INFO - Validation loss decreased (0.521306 --> 0.510636). Saving model...
2025-05-23 06:15:16 - INFO - Epoch 15/30
2025-05-23 06:23:24 - INFO - Train Loss: 0.4111 Acc: 0.8380 | Val Loss: 0.5030 Acc: 0.8042
2025-05-23 06:23:24 - INFO - Validation loss decreased (0.510636 --> 0.503027). Saving model...
2025-05-23 06:23:24 - INFO - Epoch 16/30
2025-05-23 06:31:36 - INFO - Train Loss: 0.3927 Acc: 0.8448 | Val Loss: 0.4965 Acc: 0.8179
2025-05-23 06:31:36 - INFO - Validation loss decreased (0.503027 --> 0.496542). Saving model...
2025-05-23 06:31:36 - INFO - Epoch 17/30
2025-05-23 06:39:52 - INFO - Train Loss: 0.3915 Acc: 0.8407 | Val Loss: 0.4951 Acc: 0.8088
2025-05-23 06:39:52 - INFO - Validation loss decreased (0.496542 --> 0.495055). Saving model...
2025-05-23 06:39:52 - INFO - Epoch 18/30
2025-05-23 06:48:02 - INFO - Train Loss: 0.3900 Acc: 0.8498 | Val Loss: 0.4937 Acc: 0.8103
2025-05-23 06:48:02 - INFO - Validation loss decreased (0.495055 --> 0.493703). Saving model...
2025-05-23 06:48:02 - INFO - Epoch 19/30
2025-05-23 06:56:12 - INFO - Train Loss: 0.3784 Acc: 0.8585 | Val Loss: 0.4937 Acc: 0.8012
2025-05-23 06:56:12 - INFO - EarlyStopping counter: 1 out of 5
2025-05-23 06:56:12 - INFO - Epoch 20/30
2025-05-23 07:04:20 - INFO - Train Loss: 0.3721 Acc: 0.8581 | Val Loss: 0.4914 Acc: 0.8149
2025-05-23 07:04:20 - INFO - Validation loss decreased (0.493703 --> 0.491392). Saving model...
2025-05-23 07:04:21 - INFO - Epoch 21/30
2025-05-23 07:12:30 - INFO - Train Loss: 0.3728 Acc: 0.8513 | Val Loss: 0.4941 Acc: 0.8134
2025-05-23 07:12:30 - INFO - EarlyStopping counter: 1 out of 5
2025-05-23 07:12:30 - INFO - Epoch 22/30
2025-05-23 07:26:58 - INFO - Train Loss: 0.3486 Acc: 0.8593 | Val Loss: 0.4716 Acc: 0.8209
2025-05-23 07:26:58 - INFO - Validation loss decreased (0.491392 --> 0.471608). Saving model...
2025-05-23 07:26:59 - INFO - Epoch 23/30
2025-05-23 07:42:09 - INFO - Train Loss: 0.3526 Acc: 0.8649 | Val Loss: 0.4792 Acc: 0.8088
2025-05-23 07:42:09 - INFO - EarlyStopping counter: 1 out of 5
2025-05-23 07:42:09 - INFO - Epoch 24/30
2025-05-23 07:56:56 - INFO - Train Loss: 0.3408 Acc: 0.8687 | Val Loss: 0.4695 Acc: 0.8149
2025-05-23 07:56:56 - INFO - Validation loss decreased (0.471608 --> 0.469453). Saving model...
2025-05-23 07:56:56 - INFO - Epoch 25/30
2025-05-23 08:11:58 - INFO - Train Loss: 0.3277 Acc: 0.8665 | Val Loss: 0.4782 Acc: 0.8194
2025-05-23 08:11:58 - INFO - EarlyStopping counter: 1 out of 5
2025-05-23 08:11:58 - INFO - Epoch 26/30
2025-05-23 08:27:11 - INFO - Train Loss: 0.3294 Acc: 0.8744 | Val Loss: 0.4856 Acc: 0.8149
2025-05-23 08:27:11 - INFO - EarlyStopping counter: 2 out of 5
2025-05-23 08:27:11 - INFO - Epoch 27/30
2025-05-23 08:42:13 - INFO - Train Loss: 0.3131 Acc: 0.8744 | Val Loss: 0.5008 Acc: 0.8042
2025-05-23 08:42:13 - INFO - EarlyStopping counter: 3 out of 5
2025-05-23 08:42:13 - INFO - Epoch 28/30
2025-05-23 08:57:04 - INFO - Train Loss: 0.3163 Acc: 0.8805 | Val Loss: 0.5045 Acc: 0.8134
2025-05-23 08:57:04 - INFO - EarlyStopping counter: 4 out of 5
2025-05-23 08:57:04 - INFO - Epoch 29/30
2025-05-23 09:12:06 - INFO - Train Loss: 0.2925 Acc: 0.8854 | Val Loss: 0.4999 Acc: 0.8118
2025-05-23 09:12:06 - INFO - EarlyStopping counter: 5 out of 5
2025-05-23 09:12:06 - INFO - Early stopping triggered at epoch 29
2025-05-23 09:12:06 - INFO - Training completed in 17445.03 seconds
2025-05-23 09:13:34 - INFO - Inference completed in 87.27 seconds
2025-05-23 09:13:34 - INFO - Submission saved to /workspace/mle_c617eb89-e0b7-4a21-92e8-0028d18a5053/output/submission.csv
2025-05-23 09:13:34 - INFO - Done!

=== Experiment Completed with Exit Code: 0 ===
=== Results ===
Metrics:
inference_time,training_time
87.27199244499207,17445.027638673782

Submission file preview:
id_code,diagnosis
b460ca9fa26f,0
6cee2e148520,0
ca6842bfcbc9,1
6cbc3dad809c,2
a9bc2f892cb3,0
40e9b5630438,1
e4e343eaae2a,2
f4d3777f2710,2
10a5026eb8e6,0

=== End of Experiment ===
